// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NavItems > lenses a viewer down to the read-only areas 1`] = `
<div>
  <nav
    aria-label="Main"
    class="flex flex-col gap-6"
  >
    <div>
      <ul
        class="flex flex-col gap-0.5"
      >
        <li>
          <a
            aria-current="page"
            class="block rounded-md px-3 py-2 text-sm font-medium transition-colors bg-pine text-card"
            href="/app"
          >
            Overview
          </a>
        </li>
        <li>
          <a
            class="block rounded-md px-3 py-2 text-sm font-medium transition-colors text-muted hover:bg-field hover:text-ink"
            href="/app/runs"
          >
            Runs
          </a>
        </li>
      </ul>
    </div>
    <div>
      <p
        class="px-3 pb-1 text-[11px] font-semibold uppercase tracking-[0.14em] text-muted"
      >
        Improve
      </p>
      <ul
        aria-label="Improve"
        class="flex flex-col gap-0.5"
      >
        <li>
          <a
            class="block rounded-md px-3 py-2 text-sm font-medium transition-colors text-muted hover:bg-field hover:text-ink"
            href="/app/evaluation"
          >
            Agent evaluation
          </a>
        </li>
        <li>
          <a
            class="block rounded-md px-3 py-2 text-sm font-medium transition-colors text-muted hover:bg-field hover:text-ink"
            href="/app/learning"
          >
            Learning
          </a>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`NavItems > shows every area to an admin 1`] = `
<div>
  <nav
    aria-label="Main"
    class="flex flex-col gap-6"
  >
    <div>
      <ul
        class="flex flex-col gap-0.5"
      >
        <li>
          <a
            aria-current="page"
            class="block rounded-md px-3 py-2 text-sm font-medium transition-colors bg-pine text-card"
            href="/app"
          >
            Overview
          </a>
        </li>
        <li>
          <a
            class="block rounded-md px-3 py-2 text-sm font-medium transition-colors text-muted hover:bg-field hover:text-ink"
            href="/app/checkpoints"
          >
            Checkpoints
          </a>
        </li>
        <li>
          <a
            class="block rounded-md px-3 py-2 text-sm font-medium transition-colors text-muted hover:bg-field hover:text-ink"
            href="/app/runs"
          >
            Runs
          </a>
        </li>
      </ul>
    </div>
    <div>
      <p
        class="px-3 pb-1 text-[11px] font-semibold uppercase tracking-[0.14em] text-muted"
      >
        Build
      </p>
      <ul
        aria-label="Build"
        class="flex flex-col gap-0.5"
      >
        <li>
          <a
            class="block rounded-md px-3 py-2 text-sm font-medium transition-colors text-muted hover:bg-field hover:text-ink"
            href="/app/agents"
          >
            Agents
          </a>
        </li>
        <li>
          <a
            class="block rounded-md px-3 py-2 text-sm font-medium transition-colors text-muted hover:bg-field hover:text-ink"
            href="/app/workspaces"
          >
            Workspaces
          </a>
        </li>
        <li>
          <a
            class="block rounded-md px-3 py-2 text-sm font-medium transition-colors text-muted hover:bg-field hover:text-ink"
            href="/app/systems"
          >
            Systems
          </a>
        </li>
      </ul>
    </div>
    <div>
      <p
        class="px-3 pb-1 text-[11px] font-semibold uppercase tracking-[0.14em] text-muted"
      >
        Improve
      </p>
      <ul
        aria-label="Improve"
        class="flex flex-col gap-0.5"
      >
        <li>
          <a
            class="block rounded-md px-3 py-2 text-sm font-medium transition-colors text-muted hover:bg-field hover:text-ink"
            href="/app/evaluation"
          >
            Agent evaluation
          </a>
        </li>
        <li>
          <a
            class="block rounded-md px-3 py-2 text-sm font-medium transition-colors text-muted hover:bg-field hover:text-ink"
            href="/app/learning"
          >
            Learning
          </a>
        </li>
      </ul>
    </div>
    <div>
      <ul
        class="flex flex-col gap-0.5"
      >
        <li>
          <a
            class="block rounded-md px-3 py-2 text-sm font-medium transition-colors text-muted hover:bg-field hover:text-ink"
            href="/app/logs"
          >
            Logs
          </a>
        </li>
        <li>
          <a
            class="block rounded-md px-3 py-2 text-sm font-medium transition-colors text-muted hover:bg-field hover:text-ink"
            href="/app/admin"
          >
            Admin
          </a>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;
